--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index</title>
+    <title>Halaman index</title>
 </head>
 <body>
-    
+    <h2>Halaman index</h2>
+    <h2>Halaman index</h2>
 </body>
 </html>
